Thu Jan  6 07:58:28 2005  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/usage.rb (RDoc::RDoc.usage_no_exit): Allow for colons
	  in path names on DOS machines. (thanks to Johan Nilsson)

Thu Jan  6 00:02:35 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: use MockClock.sleep instead of Kernel.sleep
	  [ruby-dev:25387]

Wed Jan  5 20:16:32 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (limited_big_rand): didn't work if SIZEOF_BDIGITS == 2.
	  [ruby-dev:25408]

	* random.c (random_seed): refined.

Wed Jan  5 16:39:54 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* parse.y (BITSTACK_POP): workaround for bcc32 compiler's bug.
	  shift assignment operator '>>=' for __int64 in struct may
	  generate collapsed code. [ruby-dev:25342]

	* win32/win32.[ch]: failed to compile on bcc32 (and probably wince)
	  [ruby-dev:25306]

Wed Jan  5 12:49:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_initialize): Thread objects cannot be initialized
	  again.  fixed: [ruby-core:04067]

Wed Jan  5 02:30:11 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (init_by_array): imported from mt19937ar-cok.tgz.
	  (genrand_int32): ditto.
	  (genrand_real): replaced with genrand_res53 in mt19937ar-cok.
	  (rand_init): support bignum for longer seed.
	  (random_seed): generate longer seed.
	  (make_mask): new function.
	  (limited_rand): ditto.
	  (limited_big_rand): ditto.
	  (rb_f_rand): call limited_rand and limited_big_rand.
	  [ruby-dev:25403]

Tue Jan  4 21:25:43 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/{test_drbssl.rb,test_drbunix.rb,ut_drb.rb}: use
	  DRbService.ext_service. reduce sleep.

Mon Jan  3 14:01:54 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (random_seed): don't use /dev/urandom if it is not
	  character device.

Mon Jan  3 11:37:42 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (random_seed): use /dev/urandom if available.
	  [ruby-dev:25392]
